# gdb_plus

./: .gitignore  README.md  changelog.md  pwninit-template.py  pydbg.py  pyproject.toml  setup.py
examples/: black_box_analysis_of_function.py  debug_self_modifying_function.py  emulate_ptrace.py  find_offset_return_pointer_from_buffer.py  template_pwninit.py  template_spwn.py
examples/challenges/: ExceptionalChecking_patched  f-hash  nopeeking
gdb_plus/: Inner_Debugger.py  __init__.py  gdb_plus.py  utils.py
gdb_plus/extra/: Structure.py  setup_clang.py
pydbg/: __init__.py  pydbg.py
tests/: ExceptionalChecking_unpacked  broken_features.py  data.txt  driveway  dump_Cube  dump_ExceptionalChecking  insaaaaaaane  out  risky-business  run_prog_with_symbols  test.py  test_Structure.py  test_arm_call  test_arm_call.c  test_many_arguments.c  test_many_arguments_aarch64  test_many_arguments_amd64  test_many_arguments_riscv  traps_withSymbols
tests/docker_image_ubuntu22/: Dockerfile  docker-compose.yml
tests/docker_image_ubuntu24/: Dockerfile  docker-compose.yml  entrypoint.sh
